[gd_scene load_steps=4 format=3 uid="uid://slot_machine_scene"]

[ext_resource type="Script" path="res://Casino/SlotMachineScene.gd" id="1"]
[ext_resource type="Script" path="res://Casino/SlotMachineGame.gd" id="2"]
[ext_resource type="Theme" path="res://Theme/theme.tres" id="3"]

[node name="SlotMachineScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.0, 1)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Container"]
layout_mode = 2
text = "КАЗИНО 'ТРИ ТОПОРА'"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Три топора... Сыграем?"
horizontal_alignment = 1

[node name="ReelsContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="Reel1" type="TextureRect" parent="Container/ReelsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 300)
expand_mode = 1
stretch_mode = 5

[node name="Reel2" type="TextureRect" parent="Container/ReelsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 300)
expand_mode = 1
stretch_mode = 5

[node name="Reel3" type="TextureRect" parent="Container/ReelsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 300)
expand_mode = 1
stretch_mode = 5

[node name="Controls" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="SpinButton" type="Button" parent="Container/Controls"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "КРУТИТЬ"

[node name="SkipButton" type="Button" parent="Container/Controls"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "ПРОПУСТИТЬ"

[node name="SlotMachineGame" type="Node" parent="."]
script = ExtResource("2")

