extends Control
## –°–ª–æ—Ç-–º–∞—à–∏–Ω–∞ "–¢—Ä–∏ —Ç–æ–ø–æ—Ä–∞" - –∏–≥—Ä–∞ —Ç–∏–ø–∞ 777

@onready var reel_1: TextureRect = $Container/ReelsContainer/Reel1
@onready var reel_2: TextureRect = $Container/ReelsContainer/Reel2
@onready var reel_3: TextureRect = $Container/ReelsContainer/Reel3
@onready var spin_button: Button = $Container/Controls/SpinButton
@onready var skip_button: Button = $Container/Controls/SkipButton
@onready var message_label: Label = $Container/MessageLabel
@onready var game_logic: SlotMachineGame = $SlotMachineGame

var reels: Array[TextureRect] = []
var is_spinning: bool = false
var reel_spinning: Array[bool] = [false, false, false]
var spin_time: Array[float] = [0.0, 0.0, 0.0]

# –¢–µ–∫—Å—Ç—É—Ä—ã –¥–ª—è —Ç–æ–ø–æ—Ä–æ–≤
var normal_axe_texture: ImageTexture
var golden_axe_texture: ImageTexture

signal casino_finished(is_win: bool)

func _ready():
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞—Ç—å –º–∞—Å—Å–∏–≤—ã
	reels = [reel_1, reel_2, reel_3]
	reel_spinning = [false, false, false]
	spin_time = [0.0, 0.0, 0.0]
	
	# –°–æ–∑–¥–∞—Ç—å —Ç–µ–∫—Å—Ç—É—Ä—ã —Ç–æ–ø–æ—Ä–æ–≤
	normal_axe_texture = AxeTextureGenerator.create_axe_texture(Vector2(200, 300), false)
	golden_axe_texture = AxeTextureGenerator.create_axe_texture(Vector2(200, 300), true)
	
	# –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –Ω–∞—á–∞–ª—å–Ω—ã–µ —Ç–µ–∫—Å—Ç—É—Ä—ã
	for reel in reels:
		reel.texture = normal_axe_texture
	
	# –ü–æ–¥–∫–ª—é—á–∏—Ç—å —Å–∏–≥–Ω–∞–ª—ã
	game_logic.spin_started.connect(_on_spin_started)
	game_logic.game_finished.connect(_on_game_finished)
	game_logic.reel_stopped.connect(_on_reel_stopped)
	
	spin_button.pressed.connect(_on_spin_button_pressed)
	skip_button.pressed.connect(_on_skip_button_pressed)
	
	update_message("–¢—Ä–∏ —Ç–æ–ø–æ—Ä–∞... –°—ã–≥—Ä–∞–µ–º?")

func _process(delta):
	"""–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –∞–Ω–∏–º–∞—Ü–∏–∏ –≤—Ä–∞—â–µ–Ω–∏—è"""
	if not is_spinning:
		return
	
	# –ë—ã—Å—Ç—Ä–æ–µ –ø–µ—Ä–µ–∫–ª—é—á–µ–Ω–∏–µ —Ç–µ–∫—Å—Ç—É—Ä –¥–ª—è —ç—Ñ—Ñ–µ–∫—Ç–∞ –≤—Ä–∞—â–µ–Ω–∏—è
	for i in range(3):
		if reel_spinning[i]:
			spin_time[i] += delta
			# –ü–µ—Ä–µ–∫–ª—é—á–∞—Ç—å –∫–∞–∂–¥—ã–µ 0.1 —Å–µ–∫—É–Ω–¥—ã
			if spin_time[i] >= 0.1:
				spin_time[i] = 0.0
				# –ë—ã—Å—Ç—Ä–æ –ø–µ—Ä–µ–∫–ª—é—á–∞—Ç—å –º–µ–∂–¥—É —Ç–µ–∫—Å—Ç—É—Ä–∞–º–∏
				if reels[i].texture == normal_axe_texture:
					reels[i].texture = golden_axe_texture
				else:
					reels[i].texture = normal_axe_texture

func _on_spin_button_pressed():
	"""–ù–∞—á–∞—Ç—å –≤—Ä–∞—â–µ–Ω–∏–µ"""
	if is_spinning:
		return
	
	game_logic.start_spin()

func _on_skip_button_pressed():
	"""–ü—Ä–æ–ø—É—Å—Ç–∏—Ç—å –∫–∞–∑–∏–Ω–æ –∏ –ø–µ—Ä–µ–π—Ç–∏ –∫ —Å—é–∂–µ—Ç—É"""
	# –û—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –∏–≥—Ä—É –µ—Å–ª–∏ –æ–Ω–∞ –∏–¥–µ—Ç
	if is_spinning:
		is_spinning = false
		for i in range(3):
			reel_spinning[i] = false
	
	# –°—Ä–∞–∑—É –ø–µ—Ä–µ–π—Ç–∏ –∫ —Å—é–∂–µ—Ç—É
	update_message("–ü—Ä–æ–ø—É—â–µ–Ω–æ...")
	casino_finished.emit(false)

func _on_spin_started():
	"""–ù–∞—á–∞–ª–æ—Å—å –≤—Ä–∞—â–µ–Ω–∏–µ - –∑–∞–ø—É—Å—Ç–∏—Ç—å –∞–Ω–∏–º–∞—Ü–∏—é"""
	is_spinning = true
	spin_button.disabled = true
	update_message("–ö—Ä—É—Ç–∏—Ç—Å—è...")
	
	# –ó–∞–ø—É—Å—Ç–∏—Ç—å –≤—Ä–∞—â–µ–Ω–∏–µ –¥–ª—è –≤—Å–µ—Ö –±–∞—Ä–∞–±–∞–Ω–æ–≤
	for i in range(3):
		reel_spinning[i] = true
		spin_time[i] = 0.0

func _on_reel_stopped(reel_index: int, result: int):
	"""–û—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –∫–æ–Ω–∫—Ä–µ—Ç–Ω—ã–π –±–∞—Ä–∞–±–∞–Ω"""
	if reel_index >= reels.size():
		return
	
	var reel = reels[reel_index]
	
	# –û—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –≤—Ä–∞—â–µ–Ω–∏–µ —ç—Ç–æ–≥–æ –±–∞—Ä–∞–±–∞–Ω–∞
	reel_spinning[reel_index] = false
	
	# –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å —Ñ–∏–Ω–∞–ª—å–Ω—É—é —Ç–µ–∫—Å—Ç—É—Ä—É
	if result == 1:  # –ó–æ–ª–æ—Ç–æ–π —Ç–æ–ø–æ—Ä
		reel.texture = golden_axe_texture
	else:  # –û–±—ã—á–Ω—ã–π —Ç–æ–ø–æ—Ä
		reel.texture = normal_axe_texture
	
	# –ê–Ω–∏–º–∞—Ü–∏—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ (–ø—Ä—ã–∂–æ–∫)
	var original_pos = reel.position
	var stop_tween = create_tween()
	stop_tween.tween_property(reel, "position:y", original_pos.y - 15, 0.1)
	stop_tween.tween_property(reel, "position:y", original_pos.y, 0.1)

func _on_game_finished(is_win: bool):
	"""–ò–≥—Ä–∞ –∑–∞–∫–æ–Ω—á–µ–Ω–∞"""
	is_spinning = false
	
	# –û—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –≤—Å–µ –≤—Ä–∞—â–µ–Ω–∏—è
	for i in range(3):
		reel_spinning[i] = false
	
	# –ü–æ–∫–∞–∑–∞—Ç—å —Ä–µ–∑—É–ª—å—Ç–∞—Ç
	if is_win:
		update_message("–î–ñ–ï–ö–ü–û–¢! –¢–†–ò –¢–û–ü–û–†–ê! üéâüéâüéâ")
		animate_win()
	else:
		update_message("–ù–µ –ø–æ–≤–µ–∑–ª–æ! –ü–æ–ø—Ä–æ–±—É–π—Ç–µ –µ—â–µ —Ä–∞–∑!")
	
	# –ü–µ—Ä–µ—Ö–æ–¥ –∫ —Å—é–∂–µ—Ç—É —á–µ—Ä–µ–∑ –Ω–µ–±–æ–ª—å—à—É—é –∑–∞–¥–µ—Ä–∂–∫—É (–≤–Ω–µ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞)
	await get_tree().create_timer(3.0).timeout
	casino_finished.emit(is_win)

func animate_win():
	"""–ê–Ω–∏–º–∞—Ü–∏—è –≤—ã–∏–≥—Ä—ã—à–∞"""
	var win_tween = create_tween()
	win_tween.set_parallel(true)
	
	# –ü—É–ª—å—Å–∞—Ü–∏—è –≤—Å–µ—Ö —Ç–æ–ø–æ—Ä–æ–≤
	for reel in reels:
		win_tween.tween_property(reel, "modulate", Color.GOLD, 0.3)
		win_tween.tween_property(reel, "modulate", Color.WHITE, 0.3).set_delay(0.3)
	
	win_tween.set_loops(3)

func update_message(text: String):
	"""–û–±–Ω–æ–≤–∏—Ç—å —Å–æ–æ–±—â–µ–Ω–∏–µ"""
	message_label.text = text

